hello-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 100%
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      affinity:
        # This ensures pods will land on separate hosts
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions: [{ key: app, operator: In, values: [hello] }]
            topologyKey: "kubernetes.io/hostname"
      containers:
      - name: hello
        image: crccheck/hello-world:latest
        ports:
          - name: http
            containerPort: 80
      terminationGracePeriodSeconds: 1
